--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </nav>
 
-  <!-- HERO -->
+  <!-- Hero section -->
   <header class="bg-gradient-to-r from-emerald-700 to-emerald-500 text-white py-12">
     <div class="max-w-6xl mx-auto text-center px-4">
       <img src="assets/logo.png" alt="center logo" class="mx-auto mb-4 rounded-full bg-white p-2 w-18 h-18">
@@ -48,7 +48,7 @@
     </div>
   </header>
 
-  <!-- MAIN -->
+  <!-- Main section start -->
   <main class="max-w-7xl mx-auto px-4 py-8 grid grid-cols-1 lg:grid-cols-4 gap-6">
     <section class="lg:col-span-3">
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -75,7 +75,6 @@
           </div>
         </div>
 
-        
         <div class="bg-white rounded-lg shadow-sm p-4">
           <div class="flex justify-between items-start">
             <div class="flex items-center gap-3">
