--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Emergency Service Directory</title>
-  <!-- TailwindCDN + DaisyUI -->
+  <!-- TailwindCDN + DaisyUI link  -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css" rel="stylesheet" />
 </head>
@@ -18,7 +18,6 @@
           <img src="assets/logo.png" alt="logo" class="w-9 h-9 rounded-full" />
           <div>
             <h1 class="font-bold text-lg">Emergency Service</h1>
-            <!-- <p class="text-xs text-gray-500 -mt-1">Government Emergency Services at Your Fingertip</p> -->
           </div>
         </div>
         <div class="flex items-center gap-6">
@@ -40,11 +39,11 @@
   </nav>
 
   <!-- Hero section -->
-  <header class="bg-gradient-to-r from-emerald-700 to-emerald-500 text-white py-12">
+  <header class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223]">
     <div class="max-w-6xl mx-auto text-center px-4">
       <img src="assets/logo.png" alt="center logo" class="mx-auto mb-4 rounded-full bg-white p-2 w-18 h-18">
-      <h2 class="text-3xl font-bold">Emergency Service Directory</h2>
-      <p class="mt-2 opacity-90">Government Emergency Services at Your Fingertips — দ্রুত তথ্য, নিরাপদ ব্যবস্থা</p>
+      <h2 class="text-3xl font-bold text-white">Emergency Service Directory</h2>
+      <p class="mt-2 opacity-90 text-white">Government Emergency Services at Your Fingertips — দ্রুত তথ্য, নিরাপদ ব্যবস্থা</p>
     </div>
   </header>
 
@@ -74,6 +73,8 @@
             </div>
           </div>
         </div>
+
+        <!------Card Section Starts------------->
 
         <div class="bg-white rounded-lg shadow-sm p-4">
           <div class="flex justify-between items-start">
@@ -243,20 +244,24 @@
       </div>
     </section>
 
-    <!-- Right Section -->
-    <aside class="bg-blue-300 p-4 rounded-lg shadow-sm">
+    <!---Card Section Ends---->
+
+    <!-- Right Section Starts -->
+    <aside class="bg-white p-4 rounded-lg shadow-sm">
       <div class="flex items-center justify-between mb-3">
         <div class="flex items-center gap-2">
           <span class="text-2xl">📞</span>
           <h3 class="font-bold text-lg">Call History</h3>
         </div>
-        <button id="clear-history" class="btn btn-ghost btn-sm">Clear</button>
+        <button id="clear-history" class="btn btn-ghost btn-sm bg-[#00A63E] rounded-xl text-white">Clear</button>
       </div>
       <ul id="call-history" class="space-y-3 text-sm">
         <li class="text-gray-500">No call history yet.</li>
       </ul>
     </aside>
   </main>
+  <!------Right Section ends------>
 
+  <!-------js file Conected---->
   <script src="index.js"></script>
   </body>
