--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="flex items-center gap-3">
           <img src="assets/logo.png" alt="logo" class="w-9 h-9 rounded-full" />
           <div>
-            <h1 class="font-bold text-lg">Emergency Service</h1>
+            <h1 class="font-bold text-lg text-green-500 ">Emergency<br>Service</h1>
           </div>
         </div>
         <div class="flex items-center gap-6">
@@ -41,7 +41,7 @@
   <!-- Hero section -->
   <header class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223]">
     <div class="max-w-6xl mx-auto text-center px-4">
-      <img src="assets/logo.png" alt="center logo" class="mx-auto mb-4 rounded-full bg-white p-2 w-18 h-18">
+      <img src="assets/logo.png" alt="center logo" class="mx-auto mb-4 rounded-full bg-white p-2 w-18 h-18 p-3">
       <h2 class="text-3xl font-bold text-white">Emergency Service Directory</h2>
       <p class="mt-2 opacity-90 text-white">Government Emergency Services at Your Fingertips — দ্রুত তথ্য, নিরাপদ ব্যবস্থা</p>
     </div>
